# chrome_passwords

./: .gitpod.yml  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs  password_linux.rs  password_windows.rs
