[package]
name = "chrome_passwords"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
base64 = "0.13.0"
colored = "2.0.0"
serde_json = "1.0.79"
sqlite = "0.26.0"
windows = { version = "0.35.0", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"] }
