[package]
name = "chrome_passwords"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
aes-gcm = "0.9.4"
base64 = "0.13.0"
cbc = "0.1.2"
colored = "2.0.0"
hmac = "0.12.1"
keyring = "1.1.2"
lazy_static = "1.4.0"
pbkdf2 = "0.11.0"
serde_json = "1.0.79"
sha1 = "0.10.1"
sqlite = "0.26.0"
windows = { version = "0.36.0", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"] }
