[package]
name = "chrome_passwords"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sqlite = "0.26.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.37.0", features = ["Win32_Security_Cryptography", "Win32_Foundation", "Win32_System_Memory"] }
aes-gcm = "0.9.4"
base64 = "0.13.0"
serde_json = "1.0.81"

[target.'cfg(unix)'.dependencies]
aes = "0.8.1"
cbc = "0.1.2"
sha1 = "0.10.1"
hmac = "0.12.1"
pbkdf2 = "0.11.0"
keyring = "1.1.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
colored = "2.0.0"
